<resources>
    <string name="app_name">Sigce</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LogIn</string>
    <string name="forget">Forgot your password?</string>

    <!-- in dashboard -->
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- activity used for dashboard-->
    <string name="name">Sudhir</string>
    <string name="notice1">Notice Board</string>
    <string name="notice2">Welcome to Sigce Portal </string>
    <string name="notice3">Tap for more Detail </string>
    <string name="attendance">Attendance</string>
    <string name="diary">Daily Diary</string>
    <string name="staff">Staff</string>
    <string name="exam">Exam</string>
    <string name="time_table">Time Table</string>
    <string name="library">Library</string>
    <string name="gallary">Gallary</string>
    <string name="review">Review</string>
    <string name="help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- profile strings-->
    <string name="display_name">Display Name</string>
    <string name="change_profile">Change profile </string>
    <string name="dob">DOB</string>
    <string name="year">Year</string>
    <string name="department">DEPT</string>
    <string name="phone_no">Phone no.</string>
    <string name="Email">123@sigce.in</string>
    <string name="Address">Address</string>
    <string name="title_activity_attendance_management">attendance_management</string>

    <!-- Register user-->
    <string name="full_name">Full Name </string>
    <string name="format">Name Middlename Surname </string>
    <string name="register">Add User</string>
    <string name="dob_format">DOB in format :DD/MM/YYYY</string>
    <string name="dept">Department</string>
    <string name="year_format">Year eg. 4th</string>
    <string name="occupation">Occupation eg. teacher/Student</string>
    <string name="registration">Add New User</string>
    <string name="clg_uid">College ID eg. 2015C60</string>
    <string name="status">Now I\'m a part of Sigce Family</string>
    <string name="status_change">Save</string>
    <string name="request">Send Friend Request</string>
    <string name="tot_friend">Total Friend</string>


</resources>
