<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@color/ori_blue2"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/sigce_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/registration"
                    android:textAlignment="center"
                    android:textColor="@color/WHITE"
                    android:textSize="30dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        style="@style/register"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        style="@style/register"
                        android:hint="@string/dob_format"
                        android:inputType="date" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/clg_uid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        style="@style/register"
                        android:hint="@string/clg_uid"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/department"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        style="@style/register"
                        android:hint="@string/dept"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        style="@style/register"
                        android:hint="@string/year_format"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/occupation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        style="@style/register"
                        android:hint="@string/occupation"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:hintTextAppearance="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    style="@style/register"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText

                        style="@style/register"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        style="@style/register"
                        android:hint="@string/phone_no"
                        android:inputType="phone" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        style="@style/register"
                        android:hint="@string/Address"
                        android:inputType="textPostalAddress" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/Register_btn"
                    android:layout_width="240dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_img"
                    android:backgroundTint="@color/red"
                    android:fontFamily="monospace"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="30sp" />
            </LinearLayout>
        </ScrollView>
</LinearLayout>

