<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/clk_pro_pic"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/default_img"
            app:civ_border_color="@color/ori_blue2"
            app:civ_border_width="3dp" />
    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/display_name"
                android:textColor="#000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/status_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/status"
                android:textColor="#000"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/total_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:text="@string/tot_friend"
                android:textColor="#000"
                android:textSize="26sp" />

            <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                android:id="@+id/request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@color/ori_blue2"
                android:orientation="vertical"
                app:corner_radius="10dp">

                <TextView
                    android:id="@+id/request1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/request"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="26dp" />


            </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

        </LinearLayout>
</RelativeLayout>