<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_img"
        android:orientation="vertical">



            <ImageView
                android:id="@+id/logo"
                android:layout_width="220dp"
                android:layout_height="190dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:scaleType="fitCenter"
                android:src="@drawable/sigce_img" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/user_bg"
                    android:drawableLeft="@drawable/user_img"
                    android:drawablePadding="30dp"
                    android:gravity="center_vertical"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textColorHint="#1e1d1d"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/user_bg"
                    android:drawableLeft="@drawable/lock_img"
                    android:drawablePadding="30dp"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textColorHint="#1e1d1d"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="240dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_img"
                    android:fontFamily="monospace"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/forget_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="@string/forget"
                    android:textColor="#ffff"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>

